--- a/javascrptDemo/canvas/canvas_画板.html
+++ b/javascrptDemo/canvas/canvas_画板.html
@@ -1,3 +1,13 @@
+<!--
+ * @Author: chanwaichun
+ * @Date: 2022-11-24 01:10:28
+ * @LastEditors: chanwaichun chanwaichuncc@163.com
+ * @LastEditTime: 2022-11-30 00:40:36
+ * @FilePath: \about-frontend\javascrptDemo\canvas\canvas_画板.html
+ * @Description: 
+ * 
+ * Copyright (c) 2022 by chanwaichun chanwaichuncc@163.com, All Rights Reserved. 
+-->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -8,7 +18,8 @@
   </head>
   <body>
     <canvas id="canvas" width="200" height="200"></canvas>
-    <script>
+    <button id="button">33333</button>
+    <script type="text/javascript">
       // 鼠标是否按下
       let status = false;
       let prevPosition = null;
@@ -28,7 +39,17 @@
       //   ctx.lineTo(100, 75);
       //   ctx.lineTo(100, 25);
 
-      ctx.stroke();
+      const btn = document.getElementById("button");
+      btn.onclick = function () {
+        console.dir(ctx.getImageData(0, 0, 5, 5));
+        const px = ctx.getImageData(0, 0, 5, 5).data;
+        console.log(px);
+        for (let i = 0; i <= px.length - 1; i = i + 4) {
+          console.log(i  % (4 * 5)/4);
+          console.log(px[i], px[i + 1], px[i + 2], px[i + 3]);
+        }
+        // const canvas = getElementById('canvas')
+      };
       function setPrevPosition(x, y) {
         prevPosition = { x, y };
       }
@@ -57,7 +78,7 @@
       }
       window.addEventListener("mousedown", (e) => {
         const { offsetX, offsetY } = e;
-        console.log(e);
+        // console.log(e);
         setPrevPosition(offsetX, offsetY);
         status = true;
       });
@@ -77,7 +98,7 @@
         }
       });
       window.addEventListener("mouseup", (e) => {
-        console.log(e);
+        // console.log(e);
         status = false;
         prevPosition = null;
       });
